# open-hands-agent

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  WINDOWS_VERIFICATION.md  clean.sh  docker-compose.yaml  docker-compose.yml  pyproject.toml  readmeAgentBackend.md  readmeArchitecture.md  readmeEnvironmentReference.md  readmeHowToUse.md  readmeIssuePlatforms.md  readmeOpenHands.md  readmePlanningUI.md  readmeSecurity.md  readmeTags.md  readmeTesting.md  readmeTroubleshooting.md
-Users-shaytessler-Desktop-dev-kato-UNA-2669-ob-love-admin-backend/: 055d32e9-17c8-48d6-b377-02703c209808.jsonl
-Users-shaytessler-Desktop-dev_kato-UNA-232-interest_core_lib/: 8d114aa8-affb-45bd-8b9e-4ad822444753.jsonl
-Users-shaytessler-Desktop-dev_kato-UNA-2669-ob-love-admin-backend/: 055d32e9-17c8-48d6-b377-02703c209808.jsonl
agent_core_lib/: README.md
codex_core_lib/: README.md
docker/: entrypoint-run.sh
kato/: __init__.py  configure_project.py  kato_core_lib.py  kato_instance.py  main.py  validate_env.py
kato_core_lib/: cli.py  configure_project.py  kato_core_lib.py  main.py  validate_env.py
openhands_agent/: alembic_config.py  configure_project.py  error_handling.py  fields.py  logging_utils.py  main.py  openhands_agent_core_lib.py  openhands_agent_instance.py  openhands_config_utils.py  openhands_result_utils.py  pull_request_context.py  validate_env.py
scripts/: bootstrap.ps1  bootstrap.sh  generate_env.py  install-python-deps.sh  run-local.ps1  run-local.sh
tests/: bootstrap.py  chaos_lib.py  rule_validator.py  test_add_repository_contract.py  test_agent_prompt_utils.py  (+143 more)
(+530 files in other folders)
